Updating linkedService: ls_transactiondb Updating linkedService: ALTADFKeyVault Updating linkedService: Altra_Test_Link Updating integrationRuntime: AltraOracleIntegrationRuntime Updating linkedService: BusinessDataDev Updating linkedService: Dynamic Campaigns Updating linkedService: PromoCode Updating linkedService: BusinessDataQA Updating linkedService: BusinessData Updating linkedService: Transaction_UAT_UATSQL_Server_Connection Updating integrationRuntime: AzureSqlPrivateEndPointConnection Updating managedVirtualNetwork: default Updating linkedService: BusinessDATAUAT_UATPRODSQL_Server_Connection Updating trigger: STr_Transaction Updating pipeline: PL_TransactionTransferQA Updating pipeline: PL_TransactionsTransfersDEV Updating pipeline: PL_TransactionTransfersUAT Updating dataset: ds_O_AltraServerConnectivity Updating dataset: ds_S_DigitalBankingConectivity Updating dataset: ds_S_DigitalBankingTransactionRecord Updating dataset: ds_S_InsertDataToAlerts Updating dataset: ds_S_Transaction_StagingUAT Updating dataset: ds_S_TransactionRecord_UAT Updating dataset: ds_S_InsertDataToAlertsQA Updating dataset: ds_S_InsertDataToAlerts_UAT Updating trigger: Str_DeleteRecordsBefore18Months Updating pipeline: PL_BackupRecordsBefore18Months Updating pipeline: PL_DeleteRecordsBefore18Months_UAT Updating trigger: Tr_DataTransfer Updating pipeline: PL_InactiveEAgreementNumberDataTransferDev Updating pipeline: PL_InactiveEAgreementNumberDataTransfer Updating pipeline: PL_InactiveEAgreementNumberDataTransfer_UAT Updating dataset: ds_O_Connectivity_InactiveEagreement Updating dataset: ds_S_InsertDataToActiveAgrmnt_DEV Updating dataset: ds_S_InsertDataToActiveAgrmnt Updating dataset: ds_S_InsertDataToActiveAgreement_UAT Updating trigger: STr_DynamicCampaigns Updating pipeline: PL_DynamicCampaignsDev Updating pipeline: PL_DynamicCampaigns Updating pipeline: PL_DynamicCampaigns_UAT Updating dataset: ds_SS_DynamicCampaignMembers Updating dataset: ds_S_StagingCampignMembers_DEV Updati

--- a/DataFactory/dataset/ds_O_DIGITALBANKING_EAGREEMENT_MAPPING.json
+++ b/DataFactory/dataset/ds_O_DIGITALBANKING_EAGREEMENT_MAPPING.json
@@ -12,5 +12,6 @@
 			"schema": "DNACUSTOM",
 			"table": "VW_DIGITALBANKING_EAGREEMENT_MAPPING"
 		}
-	}
+	},
+	"type": "Microsoft.DataFactory/factories/datasets"
 }
