--- a/DataFactory/dataset/db_s_DIGITALBANKING_EAGREEMENT_MAPPING.json
+++ b/DataFactory/dataset/db_s_DIGITALBANKING_EAGREEMENT_MAPPING.json
@@ -48,5 +48,6 @@
 			"schema": "dbo",
 			"table": "DIGITALBANKING_EAGREEMENT_MAPPING_Staging"
 		}
-	}
+	},
+	"type": "Microsoft.DataFactory/factories/datasets"
 }
